--- a/style.css
+++ b/style.css
@@ -319,6 +319,11 @@ header {
 
 }
 
+.topic img{
+    width: 50px;
+    height: 50px;
+}
+
 .game__topic {
     display: flex;
     /* grid-template-columns: repeat(5, 1fr); */
